--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.foodorderapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/afb"
@@ -10,8 +11,8 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="false"
         android:theme="@style/Theme.FoodOrderApp">
-        <activity android:name=".DetailActivity"></activity>
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".OrderActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
